# photonic-neuromorphics-sim

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .releaserc.json  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.production  Makefile  PRODUCTION_DEPLOYMENT.md  PROJECT_CHARTER.md  README.md  SDLC_COMPLETION_REPORT.md  SDLC_ENHANCEMENT_COMPLETION.md  SDLC_ENHANCEMENT_SUMMARY.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  TERRAGON_SDLC_EXECUTION_COMPLETE.md  analyze_codebase.py  autonomous_sdlc_enhancement_demo.py  autonomous_sdlc_orchestrator.py  autonomous_sdlc_results.json  comprehensive_quality_gates.py  comprehensive_research_results.json  comprehensive_test_results.json  comprehensive_testing_framework.py  (+23 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml  project-metrics.json
.terragon/: README.md  autonomous-executor.py  config.yaml  continuous-execution.sh  execution-metrics.json  execution-report-20250801-024411.md  value-discovery.py
deployment/: docker-compose.production.yml  kubernetes.yaml  production_deployment_suite.py
deployment/ci-cd/: github-actions.yml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
deployment/monitoring/: grafana-dashboard.json  prometheus-config.yml
deployment/terraform/: main.tf  variables.tf
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  BUILD.md  DEPLOYMENT_GUIDE.md  ROADMAP.md  XR_DEPLOYMENT_GUIDE.md
docs/adr/: 0000-adr-template.md  0001-photonic-simulation-framework.md
docs/guides/: README.md
docs/monitoring/: README.md
docs/runbooks/: optical_system_failures.md  simulation_performance.md
docs/security/: SECURITY_REQUIREMENTS.md  SLSA_COMPLIANCE.md
docs/workflows/: README.md  ci-cd-requirements.md  github-actions-setup.md  github-actions-templates.md
examples/: advanced_research_demo.py  breakthrough_research_demo.py  breakthrough_research_demonstration.py  comprehensive_integration_demo.py  comprehensive_research_integration.py  novel_research_demonstration.py  research_demo.py  xr_agent_mesh_demo.py
k8s/: deployment.yaml
monitoring/: docker-compose.monitoring.yml  logging_config.yaml  metrics_config.yaml  prometheus.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki-config.yaml  loki-config.yml
monitoring/otel/: collector-config.yaml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
monitoring/promtail/: promtail-config.yaml
photonic_env/: pyvenv.cfg
scripts/automation/: README.md  code_quality_monitor.py  dependency_updater.py  release_automation.py
scripts/maintenance/: repository_health_check.py
scripts/metrics/: collect_metrics.py
src/photonic_neuromorphics/: __init__.py  advanced_analytics.py  advanced_benchmarks.py  advanced_research_algorithms.py  advanced_scaling.py  architectures.py  autonomous_learning.py  autonomous_performance_enhancer.py  autonomous_performance_optimizer.py  autonomous_sdlc_execution.py  autonomous_sdlc_validator.py  benchmarks.py  breakthrough_experimental_framework.py  breakthrough_metamaterial_learning.py  breakthrough_research_validation.py  breakthrough_temporal_coherence.py  breakthrough_wavelength_entanglement.py  cli.py  components.py  comprehensive_testing_suite.py  core.py  distributed_computing.py  enhanced_core.py  enhanced_logging.py  enterprise_quality_gates.py  enterprise_quantum_security.py  enterprise_reliability.py  enterprise_reliability_framework.py  enterprise_sdlc_orchestrator.py  exceptions.py  global_deployment_orchestrator.py  global_support.py  high_performance_optimization.py  high_performance_scaling.py  hpc.py  ml_assisted_optimization.py  monitoring.py  multiwavelength.py  neuromorphic_photonic_metamaterials.py  optimization.py  (+31 more)
terraform/: main.tf
tests/: conftest.py  test_api_integration.py  test_core_integration.py  test_quantum_temporal_entanglement.py  test_simulation_workflow.py  test_ultra_high_performance_caching.py  test_xr_system.py  utils.py
(+23 files in other folders)
